syntax = "proto3";
package exomonad.effects;

// Unified error type for the extensible effects system.
// Simpler than FfiError, with Custom variant for domain-specific errors.
// Matches Rust EffectError and Haskell EffectError.

// Tagged union for effect errors.
// Uses oneof for clean serialization across WASM boundary.
message EffectError {
  oneof kind {
    NotFound not_found = 1;
    InvalidInput invalid_input = 2;
    NetworkError network_error = 3;
    PermissionDenied permission_denied = 4;
    Timeout timeout = 5;
    Custom custom = 6;
  }
}

// Resource not found (file, issue, entity, handler).
message NotFound {
  // Description of missing resource (e.g., "issue/123", "handler/unknown").
  string resource = 1;
}

// Invalid input parameters failed validation.
message InvalidInput {
  // Human-readable description of validation failure.
  string message = 1;
}

// Network or external service error.
message NetworkError {
  // Description of network/service failure.
  string message = 1;
}

// Permission denied for operation.
message PermissionDenied {
  // Description of permission failure.
  string message = 1;
}

// Operation timed out.
message Timeout {
  // Description of what timed out.
  string message = 1;
}

// Custom domain-specific error.
// Use for errors that don't fit the common patterns above.
message Custom {
  // Application-specific error code (e.g., "egregore.signal_failed").
  string code = 1;
  // Human-readable error message.
  string message = 2;
  // Optional structured data for debugging/handling (JSON bytes).
  bytes data = 3;
}

// Result envelope for effect responses.
// Uses oneof for success/error discrimination.
message EffectResult {
  oneof result {
    // JSON-encoded success value.
    bytes success_payload = 1;
    // Structured error.
    EffectError error = 2;
  }
}
